@@ -1,4 +1,10 @@
 IN DEVELOPMENT
+  
+  BUGFIXES:
+
+    * Handle when someone renames a file on disk without telling bzr.
+      Previously we would report the first file as missing, but not show
+      the new unknown file. (John Arbash Meinel, #111288)
 
 bzr 0.16rc2  2007-04-30
 
